Ensure the arrow on tooltips is visible

--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -1196,7 +1196,7 @@ img {
     text-align: center;
     word-break: break-word;
     scrollbar-width: none;
-    overflow: hidden;
+    overflow: visible;
 }
 
 #custom-tooltip.visible {
